[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/game/advancement/AdvancementDialogue.gd" type="Script" id=1]
[ext_resource path="res://source/interface/game/advancement/UnitAdvancementInfo.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/themes/wesnoth_theme.tres" type="Theme" id=3]


[node name="AdvancementDialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -321.0
margin_top = -246.0
margin_right = 321.0
margin_bottom = 246.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 3.0
margin_top = 3.0
margin_right = 639.0
margin_bottom = 489.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 636.0
margin_bottom = 422.0
size_flags_vertical = 3

[node name="UnitInfo" parent="Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 313.0
margin_bottom = 422.0

[node name="Separator" type="ColorRect" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 317.0
margin_right = 319.0
margin_bottom = 422.0
rect_min_size = Vector2( 2, 2 )

[node name="Options" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 323.0
margin_right = 636.0
margin_bottom = 422.0
size_flags_horizontal = 3

[node name="Buttons" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 426.0
margin_right = 636.0
margin_bottom = 486.0
rect_min_size = Vector2( 0, 60 )

[node name="Advance" type="Button" parent="Panel/VBoxContainer/Buttons"]
margin_right = 636.0
margin_bottom = 60.0
size_flags_horizontal = 3
text = "Advance"
[connection signal="pressed" from="Panel/VBoxContainer/Buttons/Advance" to="." method="_on_Advance_pressed"]
